Changed font to Ubuntu (issues with vert align in prev font)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,23 +7,19 @@
 }
 
 @font-face {
-    font-family: "GloberBold";
-    src: url("../fonts/custom/GloberBold/GloberBold.eot");
-    src: url("../fonts/custom/GloberBold/GloberBold.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/custom/GloberBold/GloberBold.woff") format("woff"),
-    url("../fonts/custom/GloberBold/GloberBold.ttf") format("truetype");
+    font-family: 'Ubuntu';
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
+    src: local('Ubuntu'), url(../fonts/custom/Ubuntu/Ubuntu-Medium.ttf) format('ttf');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
 @font-face {
-    font-family: "GloberThin";
-    src: url("../fonts/custom/GloberThin/GloberThin.eot");
-    src: url("../fonts/custom/GloberThin/GloberThin.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/custom/GloberThin/GloberThin.woff") format("woff"),
-    url("../fonts/custom/GloberThin/GloberThin.ttf") format("truetype");
+    font-family: 'Ubuntu';
     font-style: normal;
-    font-weight: normal;
+    font-weight: 700;
+    src: local('Ubuntu Bold'), url(../fonts/custom/Ubuntu/Ubuntu-Bold.ttf) format('ttf');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
 @font-face {
@@ -68,7 +64,6 @@
 }
 
 .nav-container {
-
     background-color: rgba(255, 255, 255, 0.2);
 }
 
@@ -87,7 +82,7 @@
 *
 * ======================================================= */
 body {
-    font-family: "GloberBold", Arial, sans-serif;
+    font-family: "Ubuntu", Arial, sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
